// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReceiptList Empty Receipt List 1`] = `
<div>
  No cases found.
</div>
`;

exports[`Storyshots ReceiptList Tabular Cases-to-Work List with some items 1`] = `
<table
  className="usa-table usa-table--borderless"
>
  <thead>
    <tr>
      <th>
        Receipt Number
      </th>
      <th>
        Case Age
      </th>
      <th>
        Case Creation
      </th>
      <th>
        Case Status
      </th>
      <th>
        Case Substatus
      </th>
      <th>
        Platform
      </th>
      <th>
        Assigned
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        1660 days
      </td>
      <td>
        1/6/2015
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        1647 days
      </td>
      <td>
        1/19/2015
      </td>
      <td>
        Eschewing Obfuscation
      </td>
      <td>
        Amazingly Successful
      </td>
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8731511"
          target="_elis_viewer"
        >
          FKE8731511
        </a>
      </td>
      <td>
        1646 days
      </td>
      <td>
        1/20/2015
      </td>
      <td>
        Eschewing Obfuscation
      </td>
      <td>
        Printing
      </td>
      <td>
        SP
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Snoozed Case List with some items 1`] = `
<table
  className="usa-table usa-table--borderless"
>
  <thead>
    <tr>
      <th>
        Receipt Number
      </th>
      <th>
        Case Age
      </th>
      <th>
        Case Creation
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        1660 days
      </td>
      <td>
        1/6/2015
      </td>
      <td>
        Legacy
      </td>
      <td>
        Assigned
      </td>
      <td>
        5 days left
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        1647 days
      </td>
      <td>
        1/19/2015
      </td>
      <td>
        Legacy
      </td>
      <td>
        Assigned
      </td>
      <td>
        5 days left
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8731511"
          target="_elis_viewer"
        >
          FKE8731511
        </a>
      </td>
      <td>
        1646 days
      </td>
      <td>
        1/20/2015
      </td>
      <td>
        SP
      </td>
      <td>
        Assigned
      </td>
      <td>
        5 days left
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Well done!
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert dismissible 1`] = `
<div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a success alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss.
        </button>
      </p>
    </div>
  </div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a warning alert
         
        <button
          onClick={[Function]}
        >
          Dismiss.
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--info usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      This is some information.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Watch out for this!
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className="usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;
